[tool.poetry]
name = "python-gpt3-codegen"
version = "0.1.0"
description = ""
authors = ["Arijit Basu <sayanarijit@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.25.0"
diskcache = "^5.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
